add knight and make it draggable so it can be placed on any cell as a starting point

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knights Travails</title>
-    <link rel="stylesheet" href="style.css">
+    <script
+      src="https://kit.fontawesome.com/6ed07fb8fe.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" type="image/png" href="./img/knight.png" />
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
         <div class="board"></div>
+        <div class="instruct">
+            <div id="knight" class="knight-container draggable" draggable="true">
+                <i class="fa-solid fa-chess-knight"></i>
+            </div>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
